Agregue mi seccion al index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Esto es un ejemplo con GIT</h1>
     <p>Un parrafo de prueba</p>
+
+    <section>
+        Mi seccion creada por fede - broko-de
+    </section>
 </body>
 </html>
