mejore el index

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <h1>Esto es un ejemplo con GIT</h1>
-    <p>Un parrafo de prueba</p>
+    <p>Modificacion OK</p>
 
     <section>
-        Mi seccion creada por fede - broko-de
+        NO ME GUSTA TU SECCION
+    </section>
+
+    <section>
+        <h2>Un subtitulo</h2>
     </section>
 </body>
 </html>
