Se describe mejor el parrafo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Esto es un ejemplo con GIT</h1>
-    <p>Un parrafo de prueba</p>
+    <p>Estamos aprendiendo con la comision GIT</p>
 
     <section>
-        Mi seccion creada por fede - broko-de
+        <h2>Mi seccion creada por fede - broko-de</h2>
     </section>
 </body>
 </html>
